--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ch-ds/vueProject.git"
   }
 }
