--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ch-ds/vueProject.git"
   }
 }
