--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "multiparty": "^4.2.2",
+    "mysql": "^2.18.1"
   },
   "repository": {
     "type": "git",
